--- a/src/App.css
+++ b/src/App.css
@@ -1,111 +1,40 @@
+.colored-toast.swal2-icon-success {
+  background-color: #a5dc86 !important;
+}
+
+.colored-toast.swal2-icon-error {
+  background-color: #f27474 !important;
+}
+
+.colored-toast.swal2-icon-warning {
+  background-color: #f8bb86 !important;
+}
+
+.colored-toast.swal2-icon-info {
+  background-color: #3fc3ee !important;
+}
+
+.colored-toast.swal2-icon-question {
+  background-color: #87adbd !important;
+}
+
+.colored-toast .swal2-title {
+  color: white;
+}
+
+.colored-toast .swal2-close {
+  color: white;
+}
+
+.colored-toast .swal2-html-container {
+  color: white;
+}
 
 .body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: linear-gradient(90deg, rgba(0,195,255,1) 0%, rgba(0,73,163,1) 52%, rgba(11,0,105,1) 100%);
-  min-height: 100%;
-}
-
-.header {
-  text-align: center;
-  color: var(--text-color);
-}
-
-.header__name {
-  color: var(--gold);
-}
-
-.header__slogan{
-  text-transform: none;
-  font-size: 0.75rem;
-}
-
-h1, h2, h3 {
-  color: white;
-  text-align: center;
-  text-transform: uppercase;
-  font-family: 'Staatliches', cursive;
-  letter-spacing: 0.1rem;
-}
-
-.lista-citas .media {
-  border-bottom: 0.1rem solid #e1e1e1;
-  padding-bottom: 3rem;
-}
-
-.lista-citas .media:last-of-type {
-  border-bottom: 0;
-}
-
-.lista-citas .media-body p {
+  background-image: linear-gradient(to right, #004e92, #000428);
   margin: 0;
 }
 
-.lista-citas .media-body span {
-  font-weight: bold;
-}
-
-label {
-  color: white;
-}
-
-input[type="date"], input[type="time"] {
-  height: 2rem;
-  padding: 0.5em 0.75em;
-  background-color: #fff;
-  border: 0.1rem solid #D1D1D1;
-  border-radius: 0.25rem;
-  box-shadow: none;
-  box-sizing: border-box;
-}
-
-.cita {
-  padding: 2rem;
-  background: white;
-  border-radius: 1rem;
-  color: black;
-  margin: 1rem 0;
-}
-
-.cita p {
-  font-weight: bold;
-  margin-bottom: .8rem;
-}
-
-.cita p span {
-  font-weight: normal;
-}
-
-.cita:first-of-type {
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-}
-
-.cita:last-of-type {
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-
-.button.eliminar, .button.eliminar:hover {
-  background-color: #c10059;
-  color: white;
-  margin-top: 2rem;
-}
-
-.alerta-error {
-  background-color: white;
-  color: red;
-  margin: 1rem 0;
-  padding: 0.5rem;
-  font-size: 1rem;
-  text-transform: uppercase;
-  text-align: center;
-  font-family: 'Staatliches', cursive;
-  border-radius: 1rem;
-}
-
-.footer {
-  text-align: center;
-  color: var(--text-color);
+.root {
+  min-height: 100vh;
 }
